--- a/src/html/agency/agency_join_frm.html
+++ b/src/html/agency/agency_join_frm.html
@@ -476,7 +476,7 @@ function updateOrderVar(){
     }
 
     values.agency_name = order.agency_name;
-    values.telphone = order.telphone;
+    values.telphone = order.tel;
     values.service_call = order.service_call;
     values.shop_address = order.shop_address;
 
@@ -499,7 +499,7 @@ function updateOrderVar(){
     }
     values.types = arr;
 
-    values.id = order.id;
+    values.id = order.ID;
     values.able = 1;
 
 }
