--- a/src/html/insure/insure_input_frm.html
+++ b/src/html/insure/insure_input_frm.html
@@ -221,10 +221,10 @@ function updateDOM(){
 // 更新变量
 function updateVar(){
 
-    values.licenseNum = order.cjh;
-    values.realName = order.xm;
-    values.idNum = order.sfz;
-    values.telphone = order.telphone;
+    values.licenseNum = order.licenseNum;
+    values.realName = order.realName;
+    values.idNum = order.idNum;
+    values.telphone = order.tel;
 
 }
 
