--- a/src/html/location/user_info_frm.html
+++ b/src/html/location/user_info_frm.html
@@ -79,7 +79,7 @@
             height: 2.2rem;
             line-height: 2.2rem;
             font-size: 0.8rem;
-            font-weight: 100;
+            /*font-weight: 100;*/
         }
         .news{
             background-color: #EAF5FF;
