--- a/src/html/order_new/order_fee/app.html
+++ b/src/html/order_new/order_fee/app.html
@@ -54,7 +54,7 @@
                     <div class="aui-list-item-right aui-font-size-16 tea-text-title">{{postFee == 0? '免费' : '+ ¥' + tea.formatMoney(postFee)}}</div>
                 </div>
                 <div class="aui-list-item-text">
-                    <div class="aui-list-item-text aui-font-size-16 tea-text-title">优惠券</div>
+                    <div class="aui-list-item-text aui-font-size-16 tea-text-title">现金券</div>
                     <div class="aui-list-item-right aui-font-size-16 tea-text-title">- ¥{{tea.formatMoney(couponFee)}}</div>
                 </div>
             </div>
