--- a/src/html/unit/coupon_list_frm.html
+++ b/src/html/unit/coupon_list_frm.html
@@ -16,7 +16,7 @@
         /*如页面需要动态滚动到底部请去除height:100%*/
         html,body {
             height: 100%;
-            overflow: auto;
+            /*overflow: auto;*/
         }
         /*针对此页面的框架重写*/
         .aui-list .aui-list-item{
@@ -29,7 +29,11 @@
             padding: 0;
         }
 
-
+        .tea-column{
+            flex-direction: column !important;
+            align-items: start !important;
+            -webkit-align-items: flex-start !important;
+        }
         .tea-flex-center{
             display: flex;
             justify-content: center !important;
@@ -38,11 +42,20 @@
         .tea-font-size-max {
             font-size: 2.2rem !important;
         }
+        .tea-font-size-middle{
+            font-size: 1.5rem !important;
+        }
         .tea-bg-deep-orange{
             background-color: #FF6633;
         }
         .tea-bg-purple{
             background-color: #5c78cd;
+        }
+        .tea-bg-cyan{
+            background-color: #4fc9e8;
+        }
+        .tea-bg-brown{
+            background-color: #f59f5d;
         }
         /*div边框的半圆形状，通用*/
         .tea-content-semicircle:before,.tea-content-semicircle:after{
@@ -97,11 +110,14 @@
         .tea-content-border-sawtooth-deep-orange:after{
             background-image: -webkit-gradient(radial,0 40%,1,0 50% ,5,from(#FF6633),color-stop(50%, #FF6633),color-stop(50%, #FFF),to(#FFF));
         }
-        .tea-content-border-sawtooth-light-gray:after{
-            background-image: -webkit-gradient(radial,0 40%,1,0 50% ,5,from(#CCCCCC),color-stop(50%, #CCCCCC),color-stop(50%, #FFF),to(#FFF));
-        }
         .tea-content-border-sawtooth-purple:after{
             background-image: -webkit-gradient(radial,0 40%,1,0 50% ,5,from(#5c78cd),color-stop(50%, #5c78cd),color-stop(50%, #FFF),to(#FFF));
+        }
+        .tea-content-border-sawtooth-cyan:after{
+            background-image: -webkit-gradient(radial,0 40%,1,0 50% ,5,from(#4fc9e8),color-stop(50%, #4fc9e8),color-stop(50%, #FFF),to(#FFF));
+        }
+        .tea-content-border-sawtooth-brown:after{
+            background-image: -webkit-gradient(radial,0 40%,1,0 50% ,5,from(#f59f5d),color-stop(50%, #f59f5d),color-stop(50%, #FFF),to(#FFF));
         }
         /*￥符号前缀*/
         .tea-text-white-money{
@@ -122,7 +138,7 @@
             <li v-for="(value,index) in list" class="aui-list-item tea-bg-white" tapmode @click="checkOn(index,value)">
                 <div class="aui-media-list-item-inner tea-content-semicircle">
                     <div v-if="value.coupon_type == couponType " :class=" ['tea-bg-'+color , 'tea-content-border-sawtooth-'+color] " class="aui-list-item-media tea-flex-center tea-content-border-sawtooth">
-                        <div class="aui-text-white tea-text-white-money tea-font-size-max" style="width:2rem; font-weight:bold; text-align: center;">{{ parseFloat(value.coupon_m) }}</div>
+                        <div :class="parseFloat(value.coupon_m) >= 100 ? 'tea-font-size-middle' : 'tea-font-size-max' " class="aui-text-white tea-text-white-money" style="width:2rem; font-weight:bold; text-align: center;">{{ parseFloat(value.coupon_m) }}</div>
                     </div>
                     <!--<div v-else-if="couponType == 'bx'" class="aui-list-item-media tea-bg-deep-orange tea-flex-center tea-content-border-sawtooth tea-content-border-sawtooth-deep-orange">
                         <div class="aui-text-white tea-text-white-money tea-font-size-max" style="width:2rem; font-weight:bold; text-align: center;">{{ parseFloat(value.coupon_m) }}</div>
@@ -132,14 +148,14 @@
                         &lt;!&ndash;<div class="aui-text-white aui-font-size-18" style="width:2rem;font-weight:bold;">{{ list.test_value }}</div> //免费审车的值样式&ndash;&gt;
                     </div>-->
                     <div v-else class="aui-list-item-media tea-bg-light-gray tea-flex-center tea-content-border-sawtooth tea-content-border-sawtooth-light-gray">
-                        <div class="aui-text-white tea-text-white-money tea-font-size-max" style="width:2rem; font-weight:bold; text-align: center;">{{ parseFloat(value.coupon_m) }}</div>
+                        <div :class="value.coupon_type == 'etc' ? 'tea-font-size-middle' : 'tea-font-size-max' " class="aui-text-white tea-text-white-money" style="width:2rem; font-weight:bold; text-align: center;">{{ parseFloat(value.coupon_m) }}</div>
                     </div>
-                    <div class="aui-list-item-inner" style="padding: 1rem 0.75rem;">
+                    <div class="aui-list-item-inner" style="padding: 0.75rem 0.75rem 0rem 0.75rem;">
                         <div class="aui-list-item-text">
                             <div class="aui-list-item-title aui-font-size-14 tea-text-title">{{ value.readme }}</div>
                         </div>
-                        <div class="aui-list-item-text">
-                            <p class="aui-ellipsis aui-font-size-12 tea-text-gray">{{ value.end_time }}</p>
+                        <div class="aui-list-item-text tea-column">
+                            <p v-for="(val,i) in value.content" class="aui-ellipsis aui-font-size-12 tea-text-gray">{{ val }}</p>
                         </div>
                         <div class="aui-list-item-text">
                             <p class="aui-ellipsis aui-font-size-12 tea-text-gray">有效期至：{{ value.end_time.split(" ")[0] }}</p>
@@ -223,6 +239,10 @@ function init(){
                         return 'deep-orange';
                     case 'tel':
                         return 'purple';
+                    case 'etc':
+                        return 'cyan';
+                    case 'oil':
+                        return 'brown';
                     default:
                         return 'light-gray'
                 }
