--- a/src/html/address/address_add_frm.html
+++ b/src/html/address/address_add_frm.html
@@ -54,7 +54,7 @@
                     <div class="aui-list-item-label" tapmode onclick="openWinPlateProvince()" style="width: 4rem">手机号码</div>
                     <div class="aui-list-item-input aui-padded-l-15">
                         <!--<div class="input-warp">{{ tel.length === 11 ? tel.replace(/^(\d{3})(\d{4})(\d{4})$/, '$1 $2 $3') : tel }}</div>-->
-                        <input type="tel" placeholder="请输入您的手机号码"
+                        <input type="tel" placeholder="请输入您的手机号码" maxlength="11"
                         v-model.trim="tel">
                     </div>
                 </div>
@@ -68,7 +68,7 @@
             <li class="aui-list-item">
                 <div class="aui-list-item-inner">
                     <textarea placeholder="请填写详细地址"
-                    v-model=" detail "></textarea>
+                    v-model=" detail " @keyup.enter="downEnter"></textarea>
                 </div>
             </li>
         </ul>
@@ -127,6 +127,12 @@ function init(){
             openFrmRegion: function(){
                 /*区域选择器*/
                 openFrmSelect()
+            },
+            downEnter: function(){
+                api.execScript({
+                    name: 'address_add_win',
+                    script: 'vm.saveAddress();'
+                });
             }
         },
         computed: {
@@ -221,6 +227,7 @@ function postData(){
         });
         return false
     }
+    tea.showp('保存中...','',true);
     api.ajax({
         url: website + 'exempt_api.php?action=newaddr',
         method: 'post',
@@ -236,6 +243,7 @@ function postData(){
             },
         }
     }, function (ret, err) {
+        api.hideProgress();
         if(!ret) return false;
         if(ret.succ == '1'){
             api.sendEvent({
@@ -255,6 +263,15 @@ function postData(){
 }
 /*编辑、修改地址提交*/
 function editorAdd(){
+    if (vm.errorMsg){
+        api.toast({
+            msg: vm.errorMsg,
+            duration: 2000,
+            location: 'middle'
+        });
+        return false
+    }
+    tea.showp('提交中...','',true);
     api.ajax({
         url: website + 'exempt_api.php?action=editaddr',
         method: 'post',
@@ -271,6 +288,7 @@ function editorAdd(){
             },
         }
     }, function (ret, err) {
+        api.hideProgress();
         if(!ret) return false;
         if(ret.succ == '1'){
             api.sendEvent({
@@ -310,7 +328,7 @@ function openFrmSelect(){
         animation: true,
         cancel: {
             text: '取消',
-            size: 16,
+            size: 14,
             w: 90,
             h: 35,
             bg: '#f5f5f5',
@@ -320,7 +338,7 @@ function openFrmSelect(){
         },
         ok: {
             text: '完成',
-            size: 16,
+            size: 14,
             w: 90,
             h: 35,
             bg: '#f5f5f5',
