--- a/src/html/order_new/order_type/app.html
+++ b/src/html/order_new/order_type/app.html
@@ -69,8 +69,8 @@ apiready = function(){
         el: '#app',
         data: {
             titleIndex: 0,
-            list: ['全部', '找代办', '汽车保险', '网约审车', 'VIP', '手机充值'],
-            type: ['all', 'agency', 'insure', 'check', 'vip', 'tel']
+            list: ['全部', '找代办', '汽车保险', '网约审车', 'VIP订单', '手机充值', 'ETC订单', '加盟申请'],
+            type: ['all', 'agency', 'insure', 'check', 'vip', 'tel', 'etc', 'join']
         },
         methods: {
             setType: function(index){
