--- a/src/html/unit/success_frm.html
+++ b/src/html/unit/success_frm.html
@@ -22,7 +22,7 @@
             overflow: auto;
             color: #666;
             text-align: center;
-            font-size: 0.7rem；
+            font-size: 0.7rem;
 		}
         section ~ section {
             margin-top: 1.5rem;
